Flatten module structure, rename

--- a/sine-nomine.cabal
+++ b/sine-nomine.cabal
@@ -10,20 +10,20 @@ build-type:     Simple
 
 library
   exposed-modules:
-      Fixpoint.Api
-      Fixpoint.Error
-      Fixpoint.Error.Passthrough
-      Fixpoint.Examples
-      Fixpoint.Internal
-      Fixpoint.IO
-      Fixpoint.IO.Passthrough
-      Fixpoint.State
-      Fixpoint.TH
-      Fixpoint.THTests
-      Fixpoint.Writer
-      Fixpoint.Writer.Passthrough
-      NextBind
-      Oldstyle.Ltl
+      Effect
+      Effect.Error
+      Effect.Error.Passthrough
+      Effect.Internal
+      Effect.IO
+      Effect.IO.Passthrough
+      Effect.State
+      Effect.TH
+      Effect.THTests
+      Effect.Writer
+      Effect.Writer.Passthrough
+      Examples
+      Logic.Ltl
+      Logic.NextBind
       ShopExample
   other-modules:
       Paths_sine_nomine
