--- a/sine-nomine.cabal
+++ b/sine-nomine.cabal
@@ -22,6 +22,7 @@ library
       Effect.Writer
       Effect.Writer.Passthrough
       Examples
+      Examples.Ltl.Simple
       Logic.Ltl
       Logic.NextBind
       ShopExample
