--- a/sine-nomine.cabal
+++ b/sine-nomine.cabal
@@ -39,6 +39,8 @@ library
     , mtl
     , parallel
     , random
+    , tasty
+    , tasty-hunit
     , template-haskell
     , th-abstraction
   default-language: Haskell2010
