Add/adapt the Ltl tests from cooked; fix Ltl bug

--- a/package.yaml
+++ b/package.yaml
@@ -15,9 +15,15 @@ dependencies:
   - th-abstraction
 
 library:
-  source-dirs: .
+  source-dirs: ./src
   ghc-options:
     -Wall
     -threaded
     -rtsopts
     -with-rtsopts=-N8
+
+tests:
+  spec:
+    main: Main.hs
+    source-dirs: ./tests
+    dependencies: sine-nomine
