--- a/sine-nomine.cabal
+++ b/sine-nomine.cabal
@@ -29,7 +29,7 @@ library
   other-modules:
       Paths_sine_nomine
   hs-source-dirs:
-      ./
+      ./src
   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N8
   build-depends:
       ansi-terminal
@@ -39,6 +39,29 @@ library
     , mtl
     , parallel
     , random
+    , tasty
+    , tasty-hunit
+    , template-haskell
+    , th-abstraction
+  default-language: Haskell2010
+
+test-suite spec
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  other-modules:
+      LtlSpec
+      Paths_sine_nomine
+  hs-source-dirs:
+      ./tests
+  build-depends:
+      ansi-terminal
+    , base
+    , containers
+    , inspection-testing
+    , mtl
+    , parallel
+    , random
+    , sine-nomine
     , tasty
     , tasty-hunit
     , template-haskell
