Fix typo in ci.yaml

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
         run: nix develop .#ci --command cabal test
   documentation:
     runs-on: ubuntu-latest
-    steps
+    steps:
       - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v22
       - name: build the docs
