--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,10 +13,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v22
       - name: run the test suite
-        run: | nix develop .#ci --command bash -c '
-          cabal update
-          cabal test
-        '
+        run: |
+          nix develop .#ci --command bash -c '
+            cabal update
+            cabal test
+          '
   documentation:
     runs-on: ubuntu-latest
     steps:
