--- a/sine-nomine.cabal
+++ b/sine-nomine.cabal
@@ -6,6 +6,8 @@ cabal-version: 1.12
 
 name:           sine-nomine
 version:        0.0.0
+license:        MIT
+license-file:   LICENSE
 build-type:     Simple
 
 library
@@ -25,6 +27,7 @@ library
       Examples.Ltl.HigherOrder
       Examples.Ltl.Simple
       Logic.Ltl
+      Logic.Ltl.TH
       Logic.NextBind
       ShopExample
   other-modules:
@@ -44,6 +47,7 @@ library
     , tasty-hunit
     , template-haskell
     , th-abstraction
+    , unification-fd
   default-language: Haskell2010
 
 test-suite spec
@@ -67,4 +71,5 @@ test-suite spec
     , tasty-hunit
     , template-haskell
     , th-abstraction
+    , unification-fd
   default-language: Haskell2010
