Add a FailEffect, use it in the simple tutorial

--- a/sine-nomine.cabal
+++ b/sine-nomine.cabal
@@ -15,6 +15,7 @@ library
       Effect
       Effect.Error
       Effect.Error.Passthrough
+      Effect.Fail
       Effect.Internal
       Effect.IO
       Effect.IO.Passthrough
