Readme + LTL simple review. (#1)
* starting reviewing readme

* finishing readme

* to monadfail, buggy atm

* Add a FailEffect, use it in the simple tutorial

* additional modification in simple example

* new example, before changing comments

* finishing code of example

* fixing modification

* Remove higher-order tutorial (only on this branch)

* updating Simple.hs with comments and different run function

* Ltl.Simple revamped

* reverting to oldstyle README as the tutorial is enough ; integrating PR comments + some changes in the process

* pair programming SimpleLtl, before renaming

* adding graphical comments

* interpretLtl to interpretMod

* Propagate interpretLtl to intepretMod some more

* Reword the Simple tutorial, again

* Apply suggestions from code review

Co-authored-by: Florent C. <florentc@users.noreply.github.com>

* Apply two more suggestions from Florent

* Move the list of language extensions to earlier

* Last changes on the wording

---------

Co-authored-by: Carl Hammann <carl.hammann@tweag.io>
Co-authored-by: carlhammann <102371507+carlhammann@users.noreply.github.com>
Co-authored-by: Florent C. <florentc@users.noreply.github.com>

--- a/sine-nomine.cabal
+++ b/sine-nomine.cabal
@@ -15,6 +15,8 @@ library
       Effect
       Effect.Error
       Effect.Error.Passthrough
+      Effect.Fail
+      Effect.Fail.Passthrough
       Effect.Internal
       Effect.IO
       Effect.IO.Passthrough
@@ -23,11 +25,11 @@ library
       Effect.THTests
       Effect.Writer
       Effect.Writer.Passthrough
-      Examples.Ltl.HigherOrder
       Examples.Ltl.Simple
       Logic.Ltl
       Logic.Ltl.TH
       Logic.NextBind
+      Logic.SingleStep
   other-modules:
       Paths_sine_nomine
   hs-source-dirs:
