new example around accounts

--- a/graft.cabal
+++ b/graft.cabal
@@ -25,6 +25,7 @@ library
       Effect.THTests
       Effect.Writer
       Effect.Writer.Passthrough
+      Examples.Ltl.Accounts
       Examples.Ltl.HigherOrder
       Examples.Ltl.HigherOrderAlternative
       Examples.Ltl.Simple
