Higher order LTL tutorial (#5)
This brings a higher order tutorial and improvements on the names for the codomain of InterpretMod

---------

Co-authored-by: mmontin <mathieu.montin@tweag.io>

--- a/graft.cabal
+++ b/graft.cabal
@@ -25,6 +25,7 @@ library
       Effect.THTests
       Effect.Writer
       Effect.Writer.Passthrough
+      Examples.Ltl.HigherOrder
       Examples.Ltl.Simple
       Logic.Ltl
       Logic.Ltl.TH
