Mm/account example (#11)
* Start docs/motivation for higher order tutorial

* Allow failing in higer-order Ltl; sketch example

* Clarify the API around stepwise modifications

In particular, we can now 'Ignore' combinations of operations and modifications

* Better constructor names for InterpretMod

* new example around accounts

* adding depiction of bugs to find

* improving comments

* up to a trace, though it behaves improperly

* Sketch another way to make operations invisible

* Sketch different way to make operations invisible

* back to no skip

* Mm/higher order documentation (#9)

Updating documentation for the higher order tutorial

* commenting non-working HighOrder.hs

* having everything building

* tests pass

* adapting comments

* removing old higher order tutorial

* changing mod

* updating Account example to be richer

* adding high order primitive

* improving accounts

* first example with anticipation

* to Maybe in attempt

* splitting into relevant file structure

* higher order interpretation function for accounts

* adding new scenarii

* minor change

---------

Co-authored-by: Carl Hammann <carl.hammann@tweag.io>
Co-authored-by: mmontin <mathieu.montin@tweag.io>

--- a/graft.cabal
+++ b/graft.cabal
@@ -25,6 +25,10 @@ library
       Effect.THTests
       Effect.Writer
       Effect.Writer.Passthrough
+      Examples.Account.AbstractDomain
+      Examples.Account.PaymentMod
+      Examples.Account.Scenarios
+      Examples.Account.SimpleDomain
       Examples.Ltl.HigherOrder
       Examples.Ltl.Simple
       Logic.Ltl
@@ -40,6 +44,7 @@ library
       ansi-terminal
     , base
     , containers
+    , extra
     , inspection-testing
     , mtl
     , parallel
@@ -63,6 +68,7 @@ test-suite spec
       ansi-terminal
     , base
     , containers
+    , extra
     , graft
     , inspection-testing
     , mtl
